a message describing changes

--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@
 				</article>
 				<article class="article-card">
 					<figure>
-						<img src="pictures/Lamine-Yamal-2.jpg" alt="Juan Román Riquelme" class="article-image" />
+						<img src="pictures/Lamine-Yamal-2.jpg" alt="" class="article-image" />
 						
 					</figure>
 					<h2><a href="are-wonderkids-overhyped-nowadays.html" class="article-title">Are wonderkids overhyped nowadays?</a></h2>
 					<div class="article-tags">
 						<span class="tag">Chronicles</span>
+					</div>
+				</article>
+				<article class="article-card">
+					<figure>
+						<img src="pictures/Parma.webp" alt="" class="article-image" />
+						
+					</figure>
+					<h2><a href="90s-parma-story-of-the-eternal-underdogs.html" class="article-title">90s Parma: Story of eternal underdogs</a></h2>
+					<div class="article-tags">
+						<span class="tag">Football Flashbacks</span>
 					</div>
 				</article>
 			</div>
