--- a/is-soccer-becoming-more-soulless.html
+++ b/is-soccer-becoming-more-soulless.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,177 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
-		<title>TBG||Is soccer becoming more boring?</title>
+		<title>TBG || Is soccer becoming more boring?</title>
+		<style>
+			/* Styles spécifiques à cette page */
+			.article-header {
+				text-align: center;
+				padding: 40px 20px;
+				background: #000;
+				margin-bottom: 30px;
+			}
+			.article-header h1 {
+				font-family: 'Bebas Neue', sans-serif;
+				font-size: 4em;
+				color: #fff;
+				letter-spacing: 2px;
+				margin-bottom: 10px;
+			}
+			.article-content {
+				max-width: 800px;
+				margin: 0 auto;
+				padding: 0 20px 40px;
+				color: #f5f5f5;
+				font-family: 'Bebas Neue', sans-serif;
+				line-height: 1.8;
+				font-size: 1.1em;
+			}
+			.article-content p {
+				margin-bottom: 20px;
+			}
+			.article-content blockquote {
+				border-left: 4px solid #333;
+				padding-left: 20px;
+				margin: 30px 0;
+				font-style: italic;
+				color: #ccc;
+			}
+			.article-tags {
+				display: flex;
+				flex-wrap: wrap;
+				gap: 8px;
+				justify-content: center;
+				padding: 20px;
+			}
+			.tag {
+				background: #2d2d2d;
+				color: #f5f5f5;
+				padding: 5px 12px;
+				border-radius: 20px;
+				font-family: 'Bebas Neue', sans-serif;
+				font-size: 0.9em;
+			}
+			.article-image {
+        		width: 100%;
+        		max-width: 600px;
+        		height: auto;
+        		margin: 20px auto;
+        		display: block;
+        		border-radius: 8px;
+    		}
+    		 .article-header {
+		        text-align: center;
+		        padding: 40px 20px;
+		        background: #000;
+		        margin-bottom: 30px;
+		    }
+		    /* Other existing styles */
+
+		    /* Home Button in Navigation */
+		    .nav-list li a.home-button {
+		        background: #1a1a1a;
+		        border: 2px solid #333;
+		        border-radius: 5px;
+		        padding: 8px 15px;
+		        transition: all 0.3s;
+		    }
+
+		    .nav-list li a.home-button:hover {
+		        background: #333;
+		        color: #ccc;
+		        border-color: #555;
+		    }
+
+		    /* Home Button in Article (if you still want it) */
+		    .home-button-container {
+		        text-align: center;
+		        margin: 20px 0 40px 0;
+		    }
+
+		    .home-button-container .home-button {
+		        display: inline-flex;
+		        align-items: center;
+		        padding: 12px 25px;
+		        background: #1a1a1a;
+		        color: #f5f5f5;
+		        text-decoration: none;
+		        font-family: 'Bebas Neue', sans-serif;
+		        font-size: 1.5em;
+		        letter-spacing: 1px;
+		        border: 2px solid #333;
+		        border-radius: 5px;
+		        transition: all 0.3s;
+		    }
+
+		    .home-button-container .home-button:hover {
+		        background: #333;
+		        color: #ccc;
+		        border-color: #555;
+		    }
+
+		    .home-button-container .home-button i {
+		        margin-right: 10px;
+		    }
+		</style>
 	</head>
 	<body>
-		
+		<header>
+			<h1>The Beautiful Game</h1>
+		</header>
+		<nav>
+    		<button class="hamburger" aria-label="Menu">☰</button>
+    		<ul class="nav-list">
+			    <li><a href="index.html" class="home-button">Home</a></li>
+			    <li><a href="Chronicles.html">Chronicles</a></li>
+			    <li><a href="football-flashbacks.html">Football Flashbacks</a></li>
+			    <li><a href="legendary-performances.html">Legendary Players</a></li>
+			    <li><a href="gaming-corner.html">Gaming Corner</a></li>
+			    <li><a href="about-me.html">About me</a></li>
+			</ul>
+
+		</nav>
+		<main>
+			<div class="article-header">
+				<h1>Is soccer becoming more boring?</h1>
+				<div class="article-tags">
+					<span class="tag">Chronicles</span>
+				</div>
+			</div>
+			<div class="article-content">
+				<img src="pictures/brazil.webp" alt="" class="article-image" />
+				<p>
+					I’ve noticed a strange thing as I’ve gotten older: soccer just doesn’t feel the same. When I was a kid, every goal, every insane dribble, every unexpected twist of a match felt like pure magic. Watching a game could make your heart race in a way that felt almost unfair. But now, sometimes, I catch myself staring at a match and thinking, “Is this it? Where’s the excitement?” And I know I’m not alone—more and more people say soccer is becoming boring.
+				</p>
+				<p>
+					Part of it is how the game itself has changed. Teams play more cautiously, tactics are safer, and risk-taking is minimized. Players are incredibly skilled, but in today’s professional game, mistakes are punished immediately. What used to feel chaotic, unpredictable, and full of personality now often feels controlled, precise, and even a little bland.
+				</p>
+				<p>
+					The evolution of soccer as a business also plays a role. Players today feel more homogeneous than ever—athletic, fast, technically polished, but often lacking the quirks that used to make a superstar unforgettable. Teams, too, are less distinct. Historic styles and identities, whether the Brazilian flair, Dutch creativity, or English grit, can feel watered down. With globalization, analytics, and branding shaping the game, clubs often play in a way that looks similar, making matches feel predictable to a casual viewer.
+				</p>
+				<img src="pictures/netherlands.jpg" alt="" class="article-image" />
+				<p>
+					But there’s another reason soccer can feel “boring,” and it has nothing to do with players or tactics: soccer isn’t art. It’s closer to war than a painting or a ballet. Each match is a battle of strategy, endurance, and psychological pressure. Teams probe each other for weaknesses, defend their positions, and strike when opportunities appear. The beauty isn’t always in a flashy goal or an acrobatic trick—it’s in the tension, the careful buildup, the cat-and-mouse of one team trying to outthink the other. That slow, cautious aspect is what can make a game feel boring at times—but paradoxically, it’s also what can make it brilliant. The smallest mistake, the tiniest lapse in concentration, can change the outcome entirely, and that high-stakes tension is thrilling if you know where to look.
+				</p>
+				<!--<img src="pictures/riquelme.jpg" alt="Juan Román Riquelme" class="article-image" />-->
+				<p>
+					Part of why soccer feels different as we grow up is our perspective. As kids, every pass or lucky bounce seemed magical. As adults, we notice defenses, build-ups, and missed chances, and the excitement feels more hidden. But it’s still there, in counterattacks, late goals, rivalries, and tournament drama. Soccer’s beauty isn’t always loud—it’s in the war-like chess match unfolding on the field, in the strategy, the patience, and the moments where a perfectly timed play can turn everything upside down.
+				</p>
+				<p>
+					So yes, soccer can feel safer, more polished, and more predictable than it once did. Players and teams may seem more homogeneous, the business of the sport is massive, and matches can sometimes feel slow. But that doesn’t mean it’s boring. Soccer’s beauty lies not in constant spectacle, but in tension, strategy, and the high stakes that can turn even the most cautious game into something unforgettable. Maybe it’s not about the game being less exciting—it’s about learning to see the beauty in the battlefield, even when it looks calm on the surface.
+				</p>
+				<p>
+					I want to conclude with this quote from Francesco Totti which I find very inspiring.
+				</p>
+				<blockquote>
+					Playing soccer with your feet is one thing, but playing with your heart is another.
+				</blockquote>
+
+			</div>
+		</main>
+		<footer>
+			<h3>Contact</h3>
+			<p>If you have any article idea, please contact me at: <a href="mailto:ayoub.melliani@hotmail.com" class="email-link">ayoub.melliani@hotmail.com</a></p>
+			<p>2024 © Ayoub M.</p>
+		</footer>
 	</body>
 </html>
